k8s-manifest/blue-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: blue-app
  labels:
    app: blue-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blue-app
  template:
    metadata:
      labels:
        app: blue-app
    spec:
      containers:
      - name: blue-app
        image: hashicorp/http-echo
        args: ['-listen=:8080','-text="I am blue"']
        ports:
         - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: blue-app-svc
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: blue-app
