k8s-manifest/green-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: green-app
  labels:
    app: green-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: green-app
  template:
    metadata:
      labels:
        app: green-app
    spec:
      containers:
      - name: green-app
        image: hashicorp/http-echo
        args: ['-listen=:8081','-text="I am green"']
        ports:
         - containerPort: 8081

---

apiVersion: v1
kind: Service
metadata:
  name: green-app-svc
spec:
  ports:
  - port: 80
    targetPort: 8081
    protocol: TCP
    name: http
  selector:
    app: green-app
