k8s-manifest/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-app-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "75"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
              name: blue-app-svc
              port: 
                number: 80         

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: greeen-app-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "25"
spec:
  rules:
  - http:
      paths:       
      - path: /
        pathType: Prefix
        backend:
          service:
              name: green-app-svc
              port: 
                number: 80
